--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
             font-size: var(--font-size--h4);
             font-weight: var(--font-weight--h4);
         }
+        .ideas .action-link {
+            font-size: unset;
+            text-decoration: underline;
+        }
 
         .track-record {
             display: flex;
@@ -335,7 +339,7 @@
                 <p class="challenge">
                     Seeking a developer for an ongoing project? Be it migrating legacy solutions to modern
                     or adapting current business processes to future needs. Consider the type of change you need
-                    and let's <span class="action-link" onclick="scrollArticles('.contact')">connect</span>.
+                    and let's <span class="action-link" onclick="scrollArticles('.contact')">connect<i class="fa-solid fa-down-long"></i></span>.
                 </p>
             </div>
 
