--- a/index.html
+++ b/index.html
@@ -309,6 +309,12 @@
             border-top: 2pt solid white;
             text-align: center;
         }
+
+        .bullet {
+            color: lavender;
+            filter: brightness(70%);
+            margin-left: -1.75rem;
+        }
     </style>
 </head>
 <body>
@@ -387,7 +393,8 @@
         <div class="projects">
             <section class="project">
                 <div class="project-heading">
-                    <div class="project-title">Park forest Marjan</div>
+                    <div class="project-title"><span class="bullet">&#9818;</span> Park forest Marjan</div>
+                    <!--<div class="project-title"><span class="bullet">&#9873;</span> Park forest Marjan</div>-->
                     <div class="project-subtitle">Interactive audio visual guide</div>
                 </div>
                 <div class="project-content">
@@ -400,7 +407,8 @@
             </section>
             <section class="project">
                 <div class="project-heading">
-                    <div class="project-title">Končar MES product configurator</div>
+                    <div class="project-title"><span class="bullet">&#9818;</span> Končar MES product configurator</div>
+                    <!--<div class="project-title"><span class="bullet">&#9873;</span> Končar MES product configurator</div>-->
                 </div>
                 <div class="project-content">
                     <p>Product configurator for Končar end users when ordering electric motors or fans through their MES website realised as 2 projects 1 year apart, with then employer LittleCode still providing support and app maintenance</p>
