updated linkedin url

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         </div>
         <div class="actions">
             <a href="mailto:matijacvrk@gmail.com" class="action-button"><i class="fa-solid fa-envelope"></i> Email me</a>
-            <a href="https://www.linkedin.com/in/matija-cvrk-1388b3101" target="_blank" class="action-button"><i class="fa-solid fa-message"></i> LinkedIn</a>
+            <a href="https://www.linkedin.com/in/matijacvrk" target="_blank" class="action-button"><i class="fa-solid fa-message"></i> LinkedIn</a>
         </div>
         <div class="copyright">
             <p>© 2025 Matija Čvrk</p>
