--- a/index.html
+++ b/index.html
@@ -406,6 +406,11 @@
                 display: none;
             }
 
+            .ideas .board .challenges .challenge {
+                width: 80vw;
+                text-align: justify;
+            }
+
             .project-actions,
             .track-record .project-content .project-actions {
                 justify-content: stretch;
@@ -413,6 +418,36 @@
             .track-record .project-content .project-actions .action-link,
             .action-button {
                 width: 100%;
+            }
+
+            .hero {
+                height: max-content;
+            }
+            .hero .card {
+                width: 90%;
+            }
+            .hero .card .action-button {
+                line-height: var(--line-height--h5);
+                margin-top: unset;
+                height: 5rem;
+                border-radius: 45px;
+            }
+            h1 {
+                font-size: 80px;
+            }
+            h2 {
+                font-size: var(--font-size--h1);
+            }
+            h3 {
+                font-size: var(--font-size--h2);
+            }
+            h4 {
+                font-size: var(--font-size--h3);
+            }
+
+            body,
+            .action-button {
+                font-size: var(--font-size--h5);
             }
         }
     </style>
