--- a/index.html
+++ b/index.html
@@ -419,6 +419,24 @@
             .action-button {
                 width: 100%;
             }
+            .track-record .project .project-heading .project-title {
+                font-size: var(--font-size--h3);
+                line-height: var(--line-height--h3);
+            }
+            .track-record .project .project-heading .project-subtitle {
+                font-size: var(--font-size--h4);
+                line-height: var(--line-height--h4);
+            }
+            .track-record .project {
+                font-size: var(--font-size--h5);
+                line-height: var(--line-height--h5);
+            }
+            .track-record .project .project-actions .action-link {
+                font-size: var(--font-size--h3);
+                line-height: var(--line-height--h3);
+                height: 5rem;
+                border-radius: 45px;
+            }
 
             .hero {
                 height: max-content;
